<resources>
    <string name="BaseUrl" translatable="false">http://10.0.2.2:8080/</string>
    <string name="app_name">ViewTube</string>
    <string name="invalidLogin">Invalid username or password</string>
    <string name="invalidPassword">Password must be at least 8 characters long and contain a non-digit character</string>
    <string name="invalidPassword2">Password must contain at least one non-numeric character</string>
    <string name="password_dont_match">Passwords do not match</string>
    <string name="channelNameRequired">Channel name is required</string>
    <string name="profilePicRequired">Profile picture is required</string>
    <string name="usernameRequired">Username is required</string>
    <string name="videoAdded">Video Added Successfully</string>
    <string name="videoUpdated">Video Updated Successfully</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="channel_name_hint">Channel Name</string>
    <string name="upload_profile_picture">UPLOAD PROFILE PICTURE</string>
    <string name="upload_from_gallery">UPLOAD FROM GALLERY</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="register_button">Register</string>
    <string name="add_video_button">Add Video</string>
    <string name="edit_video_button">Edit Video</string>
    <string name="loginButton">Button</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logOut">Log Out</string>
    <string name="upload_video">UPLOAD VIDEO</string>
    <string name="upload_thumbnail">UPLOAD THUMBNAIL</string>
    <string name="video_description">Video Description</string>
    <string name="videotitle">VideoTitle</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="comments">Comments</string>
    <string name="publisher">Publisher</string>
    <string name="date">Date</string>
    <string name="views_format">%s views</string>
    <string name="views">Views</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="share_via">Share Via</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_video">Delete Video</string>
    <string name="sure_delete_video">Are you sure you want to delete this video?</string>
    <string name="publisher_name">Publisher Name</string>
    <string name="comment_content">Comment content</string>
    <string name="edit_title">Edit Title</string>
    <string name="edit_description">Edit Description</string>
    <string name="save_changes">Save</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="cancel_edit">Cancel</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="video_title">Video Title</string>
    <string name="submit">Submit</string>
    <string name="welcome_to_viewtube">Welcome to ViewTube</string>
    <string name="new_to_viewtube">New to ViewTube?</string>
    <string name="create_an_account">Create an account</string>
    <string name="youtube_logo">YouTube Logo</string>
    <string name="welcome">Welcome</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="channel_name">Channel Name</string>
    <string name="take_pic">TAKE A PICTURE</string>
    <string name="capture_video">Capture Video</string>
    <string name="search">Search</string>
    <string name="fillAll">Please fill all fields and upload video and thumbnail.</string>
    <string name="usernameExists">Username Already Exists</string>
    <string name="no_videos">No Videos</string>
    <string name="videoUpdateFailed">Failed To Update Video</string>
    <string name="videoDeleted">Video Deleted Successfully</string>
    <string name="videoDeletedFailed">Failed To Delete Video</string>
    <string name="MissingVideoID">Video ID is Missing</string>
    <string name="MyChannel">My Channel</string>
    <string name="SignOut">Sign Out</string>
    <string name="loading_please_wait">Loading…</string>
    <string name="na_date">Unknown Date</string>
    <string name="noVideosFound">\ No videos found</string>
    <string name="searchResults">Search results for \"%1$s\": </string>
    <string name="delete_user">DELETE USER</string>
    <string name="sure_delete_user">Are you sure you want to delete this user?</string>
    <string name="userDeleted">User Deleted Successfully</string>
    <string name="userDeletedFailed">Failed To Delete User</string>
    <string name="profileUpdate">Profile Updated Successfully</string>
    <string name="profileUpdateFail">Failed To Update Profile</string>
    <string name="emptyFields">Fields cannot be empty</string>
    <string name="CameraPermissionDenied">Camera permission denied</string>
    <string name="cantEnterUserPage">Cannot Enter User Page</string>
    <string name="cantEnterAddVidPage">Cannot Enter Video Add Page</string>
    <string name="loggedInSuccessfully">logged In Successfully</string>
    <string name="loginFailed">Login Failed.Verify your credentials and Internet connection</string>
    <string name="userAdded">User Added Successfully</string>
    <string name="serverConnectionFailed">Server Connection Failed</string>
    <string name="serverError">Server Error</string>
    <string name="unknownError">Unknown Error</string>
    <string name="upload_date">Upload Date</string>
    <string name="profileUpdated">Profile Updated Successfully</string>
    <string name="profileUpdateFailed">Profile Update Failed</string>
    <string name="fieldsCanntBeEmpty">Fields cannot be empty</string>
    <string name="cameraApproved">Camera permission approved</string>
    <string name="cameraDenied">Camera permission denied</string>

</resources>