<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:adjustViewBounds="true"
        android:padding="8dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:text="@string/title" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="16dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="16dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/publisherTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="16dp"
        android:text="@string/publisher" />

    <!-- Comments Section -->
    <TextView
        android:id="@+id/commentsTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:text="@string/comments" />

    <ListView
        android:id="@+id/commentsListView"
        android:layout_width="match_parent"
        android:layout_height="229dp" />
    <EditText
        android:id="@+id/commentAddText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_a_comment"
        android:inputType="textMultiLine"
        android:padding="16dp" />

    <Button
        android:id="@+id/addCommentButton"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_comment" />

</LinearLayout>