<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EditVideo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/youtubeLogo"
            android:layout_width="51dp"
            android:layout_height="36dp"
            android:contentDescription="@string/youtube_logo"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/edit_video_button"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editVideoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/video_title" />

        <EditText
            android:id="@+id/editVideoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/video_description"
            android:inputType="textMultiLine"
            android:minLines="3" />


        <Button
            android:id="@+id/buttonUploadThumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/upload_thumbnail" />

        <ImageView
            android:id="@+id/thumbnailPrev"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:src="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/saveEditVidButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/save_changes" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="293dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/deleteVideoButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/removevid" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
