<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/commentProfilePic"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_def_user"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/publisherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Publisher Name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/commentContentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comment content" />

        <EditText
            android:id="@+id/editCommentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/EditCommentButton"
                android:layout_width="89dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:text="@string/edit" />

            <Button
                android:id="@+id/SaveCommentButton"
                android:layout_width="89dp"
                android:layout_height="36dp"
                android:text="@string/save"
                android:visibility="gone"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/DeleteCommentButton"
                android:layout_width="89dp"
                android:layout_height="36dp"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>